--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Hello World</title>
+    <meta http-equiv="refresh" content="30">
 </head>
 <body>
     <h1>Hello World!</h1>
