--- a/PaginaPrincipal.html
+++ b/PaginaPrincipal.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Intelligence network">
   <meta http-equiv="refresh" content="30">
   <!-- CSS ESTILO -->
-  <link rel="stylesheet" href="/root/RedPitayaSFR02/estilo_paginas.css">
+  <link rel="stylesheet" href="estilo_paginas.css">
   <!-- Importación JS para la barra de navegación -->
   <script src="js/navbar-ontop.js"></script>
   <script src="js/smooth-scroll.js" style=""></script>
