--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
-<head>
-    <title>Hello World</title>
-    <meta http-equiv="refresh" content="30">
-</head>
-<body>
-    <h1>Hello World! Daniel</h1>
-    <p>Welcome to the index.html web page..</p>
-    <p>Here's a link to <a href="ipsum.html">Ipsum</a></p>
-</body>
-</html>
+
+  <html>
+  <head>
+      <title>Hello World</title>
+      <meta http-equiv="refresh" content="30">
+  </head>
+  <body>
+      <h1>No hay presencia</h1>
+      <p>Welcome to the index.html web page..</p>
+  </body>
+  </html>
+  
